<resources>
    <string name="app_name">kapp2</string>
    <string name="title_home">Home</string>
    <string name="title_botones">Botones</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="botones">Botones</string>
    <string name="favoritos">Favoritos</string>
    <string name="wellcome_to_kapp2">Welcome to Kapp2!</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="name">Name</string>
    <string name="tematica">Tematicas</string>
    <string-array name="tematicas">
        <item>Todos</item>
        <item>Gritos</item>
        <item>Música</item>
        <item>Memes</item>
        <item>Chistes</item>
        <item>2ºK DAM</item>
    </string-array>
</resources>